Fixed tests with multiple action profiles